--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "cors":"*",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.8.7",
